inputpanelv1window: show window when client maps it after setting the mode

BUG: 460537


(cherry picked from commit 75806ecff544ae3305593532e9e99b4af7333d40)