src/inputmethod.cpp
@@ -355,7 +355,9 @@ void InputMethod::textInputInterfaceV3EnabledChanged()
 
     auto t3 = waylandServer()->seat()->textInputV3();
     refreshActive();
-    if (!t3->isEnabled()) {
+    if (t3->isEnabled()) {
+        show();
+    } else {
         // reset value of preedit when textinput is disabled
         resetPendingPreedit();
     }
@@ -700,10 +702,10 @@ void InputMethod::updateInputPanelState()
 
     QRectF overlap = QRectF(0, 0, 0, 0);
     if (m_trackedWindow) {
-        const bool bottomKeyboard = m_panel && m_panel->mode() != InputPanelV1Window::Overlay && m_panel->isShown();
+        const bool bottomKeyboard = m_panel && m_panel->mode() != InputPanelV1Window::Mode::Overlay && m_panel->isShown();
         m_trackedWindow->setVirtualKeyboardGeometry(bottomKeyboard ? m_panel->inputGeometry() : QRectF());
 
-        if (m_panel && m_panel->mode() != InputPanelV1Window::Overlay) {
+        if (m_panel && m_panel->mode() != InputPanelV1Window::Mode::Overlay) {
             overlap = m_trackedWindow->frameGeometry() & m_panel->inputGeometry();
             overlap.moveTo(m_trackedWindow->mapToLocal(overlap.topLeft()));
         }
