src/inputpanelv1window.h
@@ -23,7 +23,8 @@ class InputPanelV1Window : public WaylandWindow
 public:
     InputPanelV1Window(KWaylandServer::InputPanelSurfaceV1Interface *panelSurface);
 
-    enum Mode {
+    enum class Mode {
+        None,
         Toplevel,
         Overlay,
     };
@@ -88,9 +89,11 @@ private:
     void showOverlayPanel();
     void reposition();
     void setOutput(KWaylandServer::OutputInterface *output);
+    void handleMapped();
+    void maybeShow();
 
     QPointer<Output> m_output;
-    Mode m_mode = Toplevel;
+    Mode m_mode = Mode::None;
     bool m_allowed = false;
     bool m_shouldBeShown = false;
     const QPointer<KWaylandServer::InputPanelSurfaceV1Interface> m_panelSurface;
